<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_switch_conversation"
        android:icon="@drawable/ic_edit"
        android:title="@string/switch_conversation"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_new_conversation"
        android:icon="@drawable/ic_add"
        android:title="@string/new_conversation"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_toggle_web_search"
        android:title="开启联网搜索"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_thinking"
        android:title="深度思考：关闭"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_retry"
        android:title="@string/retry"
        android:icon="@drawable/ic_retry"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_archive_memory"
        android:title="封存记忆到角色卡"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_import_chat_log"
        android:title="导入酒馆聊天记录"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="搜索"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_edit_system_prompt"
        android:title="@string/edit_system_prompt"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear"
        android:title="@string/clear_chat"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_conversation"
        android:title="@string/delete_conversation"
        android:icon="@drawable/ic_delete"
        app:showAsAction="never" />

</menu>
